<resources>
    <string name="app_name">Calculator</string>
    <string name="assignment1">Assignment1</string>
    <string name="digitOne">1</string>
    <string name="digitTwo">2</string>
    <string name="digitThree">3</string>
    <string name="addOperator">+</string>
    <string name="digitFour">4</string>
    <string name="digitFive">5</string>
    <string name="digitSix">6</string>
    <string name="subtractionOperator">-</string>
    <string name="digitSeven">7</string>
    <string name="digitEight">8</string>
    <string name="digitNine">9</string>
    <string name="multiplyOperator">*</string>
    <string name="clearButton">C</string>
    <string name="digitZero">0</string>
    <string name="equalitySign">=</string>
    <string name="divisionOperator">/</string>
    <string name="advance">Advance</string>
    <string name="minOperator">MIN</string>
    <string name="maxOperator">MAX</string>
    <string name="powOperator">POW</string>
    <string name="remainderOperator">%</string>

</resources>